# ml_tools

./: Dockerfile  LICENSE  Makefile  README.md  check.sh  docker-compose.yml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml  publish.yml  release.yml
src/ml_experiment_tools/feature_engineering/: __init__.py  knn.py  meta.py  onehot_encoding.py  target_encoding.py
src/ml_experiment_tools/utils/: __init__.py  logger.py  reduce_mem_usage.py
tests/: test_hello.py
tests/feature_engineering/: test_knn.py  test_meta.py  test_onehot_encoder.py  test_target_encoding.py
tests/utils/: test_reduce_mem_usage.py
