[metadata]
name = ml-tools-TAKAFUMI-TAKIZAWA
version = 0.0.1
author = takafumi takizawa
author_email = zawa78@gmail.com
description = utility functions for ml app and datascience
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ttakizawa/ml_tools
project_urls =
    Bug Tracker = https://github.com/ttakizawa/ml_tools/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[flake8]
exclude =
    .git,
    .github,
    __pycache__,
    .vscode,
    venv,
    env,
    tests
filename = *.py
max-line-length = 120
max-complexity = 10
ignore = D203